# oxfeed

./: .env.dist  .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: Cargo.toml
api/sql/: counts.sql  demo.sql  fts_items.sql  item_content.sql  item_icon.sql  languages.sql  login.sql  rename_tag.sql  search_items.sql  search_items_count.sql  search_tags.sql  search_tags_count.sql  structure.sql  tags.sql
api/src/: cache.rs  errors.rs  form.rs  identity.rs  lib.rs  main.rs  update.rs
api/src/model/: item.rs  mod.rs  new_user.rs  source.rs  user.rs
api/src/services/: auth.rs  favicon.rs  filter.rs  icon.rs  item.rs  mod.rs  opml.rs  rss.rs  search.rs  source.rs  sse.rs  tag.rs  user.rs  webhook.rs  websocket.rs
api/src/sql/: counts.sql  login.sql  logout.sql  read_all.sql  source.sql  structure.sql
cli/: Cargo.toml
cli/src/: errors.rs  main.rs
common/: Cargo.toml
common/sql/: filter-delete.sql  filters.sql  item.sql  webhook-delete.sql  webhook.sql  webhooks.sql
common/src/: account.rs  errors.rs  filter.rs  item.rs  lib.rs  media.rs  new_user.rs  pagination.rs  source.rs  tag.rs  user.rs  webhook.rs
front/: .gitignore  Cargo.toml  Trunk.toml  build.rs  index.html  package.json
front/src/: action.rs  alert.rs  api.rs  cha.rs  context.rs  errors.rs  event.rs  filter.rs  lib.rs  location.rs  main.rs  render.rs
front/src/api/: _account.rs  _auth.rs  _filters.rs  _items.rs  _opml.rs  _sources.rs  _tags.rs  _token.rs  _webhooks.rs  auth.rs  items.rs  mod.rs  opml.rs  sources.rs  tag.rs  user.rs  webhooks.rs
front/src/components/: actions.rs  alerts.rs  all.rs  app.rs  bulk_actions.rs  empty.rs  error.rs  favorites.rs  filter.rs  form.rs  header.rs  item.rs  items.rs  list.rs  login.rs  logout.rs  media.rs  mod.rs  not_found.rs  pager.rs  popover.rs  settings.rs  sidebar.rs  source.rs  sources.rs  svg.rs  swipe.rs  switch.rs  tag.rs  tags.rs  theme.rs  unread.rs  webhook.rs
front/src/components/form/: account.rs  autocomplete.rs  filter.rs  login.rs  mod.rs  register.rs  source.rs  tags.rs  webhook.rs
front/src/components/search/: bar.rs  mod.rs
front/src/components/settings/: account.rs  filters.rs  mod.rs  opml.rs  webhooks.rs
front/static/: index.html  index.html.tera
front/static/css/: main.css  main.scss
src/: main.rs
src/model/: item.rs
src/sql/: structure.sql
