[workspace]
members = [
    "api",
    "common",
    "front",
]

[workspace.dependencies]
actix-web = "4.0"
base64 = "0.22"
envir = "0.4"
feed-rs = "2.0"
hmac = "0.12"
jwt = "0.16"
log = "0.4"
opml = "1.0"
reqwest = "0.12"
ring = "0.17.0-alpha.7"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
url = "2.2"
uuid = "1.0"

[workspace.dependencies.attohttpc]
version = "0.28"
features = ["json"]

[workspace.dependencies.chrono]
version = "0.4"
features = ["serde"]

[workspace.dependencies.elephantry]
version = "4.0"
features = ["date", "uuid"]

[workspace.dependencies.elephantry-extras]
version = "0.7"
features = ["serde"]
