[workspace]
members = [
    "api",
    "common",
    "front",
]
resolver = "3"

[workspace.package]
rust-version = "1.91"

[workspace.dependencies]
actix-web = "4.0"
base64 = "0.22"
feed-rs = "2.0"
gloo = "0.11"
hmac = "0.12"
jwt = "0.16"
log = "0.4"
opml = "1.0"
reqwest = "0.13"
regex = "1.4"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
url = "2.2"
uuid = "1.0"

[workspace.dependencies.attohttpc]
version = "0.28"
features = ["json"]

[workspace.dependencies.chrono]
version = "0.4"
features = ["serde"]

[workspace.dependencies.envir]
version = "1.0"
default-features = false

[workspace.dependencies.elephantry]
version = "5.0"
features = ["date", "uuid"]

[workspace.dependencies.elephantry-extras]
version = "0.9"
features = ["serde"]
