[package]
name = "oxfeed-api"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
license = "MIT"

[dependencies]
actix = "0.13"
actix-cors = "0.7"
actix-web.workspace = true
actix-web-actors = "4.0"
base64.workspace = true
bigdecimal = "0.4"
chrono.workspace = true
env_logger = "0.11"
envir.workspace = true
feed-rs.workspace = true
futures-util = "0.3"
hmac.workspace = true
jwt.workspace = true
log.workspace = true
opml.workspace = true
rayon = "1.5"
ring.workspace = true
scraper = "0.19"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tree_magic_mini = "3.0"
url.workspace = true

[dependencies.attohttpc]
workspace = true
features = ["json"]

[dependencies.oxfeed-common]
version = "0.1"
path = "../common/"
features = ["back"]

[dependencies.elephantry]
workspace = true
features = ["numeric", "serde"]

[dependencies.uuid]
workspace = true
features = ["serde"]
