[package]
name = "oxfeed-api"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
license = "MIT"

[dependencies]
actix = "0.13"
actix-cors = "0.7"
actix-web.workspace = true
base64.workspace = true
bigdecimal = "0.4"
chrono.workspace = true
elephantry-extras.workspace = true
feed-rs.workspace = true
futures-util = "0.3"
hmac.workspace = true
jwt.workspace = true
log.workspace = true
mime = "0.3.17"
opml.workspace = true
rayon = "1.5"
ring.workspace = true
scraper = "0.22"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tree_magic_mini = "3.0"
url.workspace = true

[dependencies.attohttpc]
workspace = true
features = ["json"]

[dependencies.envir]
workspace = true
default-features = true

[dependencies.oxfeed]
version = "0.1"
path = "../common/"
features = ["back"]

[dependencies.elephantry]
workspace = true
features = ["numeric", "serde"]

[dependencies.uuid]
workspace = true
features = ["serde"]
