[package]
name = "oxfeed-cli"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2018"

[dependencies]
attohttpc = "0.16"
dotenv = "0.15"
elephantry = "1.3"
env_logger = "0.8"
feed-rs = "0.4"
log = "0.4"
rayon = "1.5"
scraper = "0.12"
single-instance = "0.1"
structopt = "0.3"
thiserror = "1.0"
url = "2.2"
uuid = "0.8"

[dependencies.oxfeed-common]
version = "0.1"
path = "../common"
features = ["back"]
