[package]
name = "oxfeed-common"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
serde_json = "1.0.60"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.elephantry]
version = "1.3"
optional = true
features = ["date", "uuid"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "0.8"
features = ["serde"]

[features]
default = []
back = ["elephantry"]
