[package]
name = "oxfeed-common"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0"
http = "0.2"
jwt = "0.15"
serde_json = "1.0"
thiserror = "1.0"

[dependencies.actix-web]
version = "3.3"
optional = true

[dependencies.attohttpc]
version = "0.17"
optional = true

[dependencies.base64]
version = "0.13"
optional = true

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.elephantry]
version = "2.1"
optional = true
features = ["date", "uuid"]

[dependencies.feed-rs]
version = "1.0"
optional = true

[dependencies.log]
version = "0.4"
optional = true

[dependencies.opml]
version = "1.0"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "0.8"
features = ["serde"]

[features]
default = []
back = ["actix-web", "attohttpc", "base64", "log", "feed-rs", "elephantry", "opml"]
