[package]
name = "oxfeed-common"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
license = "MIT"

[dependencies]
chrono.workspace = true
envir.workspace = true
jwt.workspace = true
serde_json.workspace = true
thiserror = "1.0"

[dependencies.actix-web]
workspace = true
optional = true

[dependencies.attohttpc]
workspace = true
optional = true

[dependencies.base64]
workspace = true
optional = true

[dependencies.elephantry]
workspace = true
optional = true
features = ["date", "uuid"]

[dependencies.feed-rs]
workspace = true
optional = true

[dependencies.log]
workspace = true
optional = true

[dependencies.opml]
workspace = true
optional = true

[dependencies.reqwest]
workspace = true
optional = true

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.uuid]
version = "1.0"
features = ["serde"]

[features]
default = []
back = ["actix-web", "attohttpc", "base64", "log", "feed-rs", "elephantry", "opml"]
front = ["reqwest"]
