[package]
name = "oxfeed-front"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
futures = "0.3"
gloo = "0.8"
hmac = "0.12"
http = "0.2"
jwt = "0.16"
regex = "1.4"
ring = "0.17.0-alpha.7"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
urlencoding = "2.0"
uuid = "1.0"
wasm-bindgen = "0.2"
wasm-cookies = "0.1"
wasm-logger = "0.2"
wasm-sockets = "1.0"
yew-agent = "0.2"
yew-router = "0.17"

[dependencies.elephantry-extras]
version = "0.4"
features = ["yew-pager"]

[dependencies.chrono-humanize]
version = "0.2"
features = ["wasmbind"]

[dependencies.log]
version = "0.4"
features = ["serde"]

[dependencies.oxfeed-common]
version = "0.1"
features = ["front"]
path = "../common/"

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.web-sys]
version = "0.3"
features = ["HtmlDocument", "Performance"]

[dependencies.yew]
version = "0.20"
features = ["csr"]

[build-dependencies]
dotenv = "0.15"
