[package]
name = "oxfeed-front"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
futures = "0.3"
gloo = "0.11"
hmac.workspace = true
http.workspace = true
jwt.workspace = true
regex = "1.4"
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
urlencoding = "2.0"
uuid.workspace = true
wasm-bindgen = "0.2"
wasm-cookies = "0.2"
wasm-logger = "0.2"
wasm-sockets = "1.0"
yew-agent = "0.2"
yew-router = "0.17"

[dependencies.elephantry-extras]
version = "0.4"
features = ["yew-pager"]

[dependencies.chrono-humanize]
version = "0.2"
features = ["wasmbind"]

[dependencies.log]
workspace = true
features = ["serde"]

[dependencies.oxfeed-common]
version = "0.1"
features = ["front"]
path = "../common/"

[dependencies.reqwest]
workspace = true
features = ["json"]

[dependencies.web-sys]
version = "0.3"
features = ["HtmlDocument", "Performance"]

[dependencies.yew]
version = "0.20"
features = ["csr"]

[build-dependencies]
envir.workspace = true
