[package]
name = "oxfeed-front"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2024"
license = "MIT"

[dependencies]
futures = "0.3"
gloo.workspace = true
hmac.workspace = true
jwt.workspace = true
regex = "1.4"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
urlencoding = "2.0"
wasm-bindgen = "0.2"
wasm-cookies = "0.2"
wasm-logger = "0.2"
yew-callback = "0.1"
yew-router = "0.18"

[dependencies.elephantry-extras]
workspace = true
features = ["serde", "yew-pager"]

[dependencies.chrono-humanize]
version = "0.2"
features = ["wasmbind"]

[dependencies.log]
workspace = true
features = ["serde"]

[dependencies.oxfeed]
version = "0.1"
features = ["front"]
path = "../common/"

[dependencies.reqwest]
workspace = true
features = ["json"]

[dependencies.uuid]
workspace = true
features = ["v4", "js"]

[dependencies.web-sys]
version = "0.3"
features = ["Document", "HtmlDocument", "Performance", "Touch", "TouchEvent", "TouchList", "VisibilityState"]

[dependencies.yew]
version = "0.21"
features = ["csr"]

[build-dependencies.envir]
workspace = true
features = ["dotenv"]
